--- a/ScadeSuiteWeb.Client/Editor/ToolBox.razor
+++ b/ScadeSuiteWeb.Client/Editor/ToolBox.razor
@@ -1,12 +1,9 @@
-﻿@* Plus.png --> 从 suite 截图来的 50px * 50px 的加号图片   *@
-<FluentIcon Title="Plus" Value="@(Icon.FromImageUrl("images/math/Plus.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px" />
-<FluentIcon Title="Minus"  Value="@(Icon.FromImageUrl("images/math/Minus.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px"/>
-<FluentIcon Title="Multiplication" Value="@(Icon.FromImageUrl("images/math/Multiplication.png "))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px"/>
-<FluentIcon Title="Polymorphic Division" Value="@(Icon.FromImageUrl("images/math/PolymorphicDivision.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px"/>
-<FluentIcon Title="Modulo"   Value="@(Icon.FromImageUrl("images/math/Modulo.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px" />
-<FluentIcon Title="Unary Minus"  Value="@(Icon.FromImageUrl("images/math/UnaryMinus.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px" />
-<FluentIcon Title="Numerical Cast" Value="@(Icon.FromImageUrl("images/math/NumericalCast.png"))" Width="25px" Color="@Color.Neutral" Slot="start" Style="margin: 0 10px" />
+﻿@using ScadeSuiteWeb.Client.Services
+@inject DragDropService DragDropService
+
+@* Plus.png --> 从 suite 截图来的 50px * 50px 的加号图片   *@
+
 
 @code {
-    
+
 }
